src/styles.css
*, *::before, *::after {
    margin: 0;
    box-sizing: border-box;
    user-select: none;
}

:root {
    /* colors */
    --night: rgba(17, 17, 17, 1);
    --cambridge: rgb(115, 174, 135);
    --amber: rgb(225, 191, 0);
    --platinum: rgb(229, 228, 226);
    --moonglow: rgb(182, 205, 209);

    --KodeMono: "Kode Mono";
    --Anta: "Anta";
}

.kode-mono {
    font-family: "Kode Mono", monospace;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
  }
.anta-regular {
    font-family: "Anta", sans-serif;
    font-weight: 400;
    font-style: normal;
  }




/* GLOBALS */
a {
    margin: 0;
    padding: 0;

    text-decoration: none;
    user-select: none;
    color: inherit;
}
ul > * {
    text-decoration: none;
    list-style: none;
    user-select: none;
}
ol > * {
    text-decoration: none;
    user-select: none;
}
h1 {
    font-size: 2.5rem;
    font-family: var(--Anta);
}
h2 {
    font-size: 2rem;
}
h3 {
    font-size: 1.5rem;
}
h4 {
    font-size: 1.25rem;
}
h5 {
    font-size: 1rem;
}

body {
    background-color: var(--night);
    overflow-x: hidden;
    margin: 1rem;
}
/* END GLOBALS */




/* HEADER */

header {
    display: flex;
    margin: 0 0 2rem 0;
    align-items: center;
}
header > * {
    user-select: none;
}
.profContainer {
    max-height: 5rem;
    padding: 0 0 0 0.5rem;
}
.profContainer > img {
    max-height: 6rem;
    margin: 0 5rem 0 0;
}
.nametag {
    font-family: var(--Anta);
    color: var(--amber);
    text-align: center;
}
.subline {
    display: flex;
}
.subline > * {
    color: var(--cambridge);
    font-family: var(--KodeMono);
}
.aka {
    margin: 0 1rem 0 0;
}
.anthony {
    margin: 0 1rem 0 0;
}

/* END HEADER */




/* NAV */
nav {
    justify-content: center;
}
nav > * {
    user-select: none;
}
.sitePages {
    display: flex;
    margin: 1rem;
    padding: 0 3rem 0 1rem;
    align-items: center;
    justify-content: space-between;
}
.sitePages > li > button {
    padding: 0.25rem;
    border: none;
    background-color: inherit;

    color: var(--amber);
    font-size: 1rem;
}
.sitePages > li > button:hover {
    box-shadow: 0.15rem 0.15rem 0.5rem var(--cambridge);
    border: 0.05rem solid var(--amber);
    border-radius: 0.15rem;
}
/* END NAV */




/* CONTENT */
.content {
    display: block;
    margin: 3rem;
    padding: 0 0 0 0.5rem;
}

/* home */
.live {
    text-align: center;
    color: var(--amber);
}
.more {
    text-align: center;
    color: var(--amber);
}
.checkAbout {
    display: flex;
    margin: 1rem 0 0 0;
    justify-content: center;
}
.aboutLink {
    color: var(--cambridge);
}
.aboutLink:hover {
    cursor: pointer;
}
.aboutTag {
    margin: 0 0 0 0.5rem;
    padding: 0.25rem 0 0 0;
    color: var(--amber);
}
.vig {
    margin: 1.5rem 0 0 0;
    text-align: center;
    color: var(--amber);
}
/* end home */




/* about */
.aboutContent {
    max-height: 18rem;
    overflow-y: scroll;

    scrollbar-color: var(--night) var(--cambridge);
    scrollbar-width: thin;
}
.aboutQuestion {
    margin: 1rem 0 1rem 0;
}
.whereAmI, .contact {
    margin: 2.5rem 0 0 0;
}
.question {
    color: var(--cambridge);
}
.defNeester {
    margin: 1rem 0 0 2rem;
    color: var(--amber);
}
.entryNee {
    display: flex;
}
.nee {
    margin: 0 0.25rem 0 0;
    color: var(--cambridge);
}
.neePronunc {
    font-size: 0.9rem;
    padding: 0 0 0 0;
}
.neeDef {
    display: block;
}
.neeArt {
    font-style: italic;
    font-size: 0.75rem;
}
.neeDefLines > li {
    font-size: 0.75rem;
}
/* whereAmI */
.qAnswer {
    margin: 1rem 0 0 0;
}
.qAnswer > p {
    color: var(--amber);
    font-size: 0.85rem;
    font-family: 'Times New Roman', Times, serif;
    line-height: 1.15rem;
    text-indent: 1.5rem;
}
/* END about */



/* blog */
.crickets {
    text-align: center;
    color: var(--cambridge);
}
.chirp {
    text-align: center;
    color: var(--amber);
}
/* END blog */
/* END CONTENT */




/* SOCIALS */
.socials {
    display: flex;
    max-height: 5rem;
    margin: 3rem 1rem 0 1rem;
    align-items: center;
    justify-content: space-between;
}
.git > img {
    max-height: 2rem;
}
.kofi > img {
    max-height: 1.5rem;
}
.insta > img {
    max-height: 3rem;
}
.goodreads > img {
    max-height: 1.25rem;
}
.linkedIn > img {
    max-height: 1.5rem;
}
/* END SOCIALS */

/* @media only screen and (min-width: 700px) {

} */

/* @media only screen and (max-width: 599px) {

} */

